--- a/.dev/sass/partials/_posts-and-pages.scss
+++ b/.dev/sass/partials/_posts-and-pages.scss
@@ -178,6 +178,7 @@
 .person-meta {
 	margin-bottom: 1em;
 	margin-bottom: 1rem;
+	font-family: $sans-font-family;
 
 	.genericon {
 		line-height: 2;
