--- a/.dev/sass/partials/_typography.scss
+++ b/.dev/sass/partials/_typography.scss
@@ -13,7 +13,7 @@ $header-font-style: $font-weight-normal !default;
 $header-font-color: #222 !default;
 $header-line-height: 1.4 !default;
 $header-top-margin: .2rem !default;
-$header-bottom-margin: .5rem !default;
+$header-bottom-margin: 1rem !default;
 $header-text-rendering: optimizeLegibility !default;
 
 // We use these to control header font sizes
