--- a/.dev/sass/variables/_variables.scss
+++ b/.dev/sass/variables/_variables.scss
@@ -102,7 +102,8 @@ $heading-font-color: #222;
 $body-font-color: #444;
 $body-font-subtle-color: #aaa;
 $sans-font-family: "Lato", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-$body-font-family: $sans-font-family;
+$serif-font-family: Merriweather, Georgia, "Times New Roman", serif;
+$body-font-family: $serif-font-family;
 $font-weight-normal:normal;
 $body-font-weight: $font-weight-normal;
 $body-font-style: normal;
@@ -168,13 +169,13 @@ $cursor-text-value: text;
 $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: "PT Serif", Georgia, serif;
+$header-font-family: $sans-font-family;
 $header-font-weight: normal;
 $header-font-style: bold;
 $header-font-color: #222;
 $header-line-height: 1.4;
 $header-top-margin: 0;
-$header-bottom-margin: .5rem;
+$header-bottom-margin: 1rem;
 $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
@@ -207,7 +208,7 @@ $small-font-color: scale-color($header-font-color, $lightness: 35%);
 // We use these to style paragraphs
 $paragraph-font-family: inherit;
 $paragraph-font-weight: $font-weight-normal;
-$paragraph-font-size: 1rem;
+$paragraph-font-size: rem-calc(18);
 $paragraph-line-height: 1.6;
 $paragraph-margin-bottom: rem-calc(20);
 $paragraph-aside-font-size: rem-calc(14);
@@ -260,6 +261,10 @@ $blockquote-border: 2px solid #ddd;
 $blockquote-cite-font-size: rem-calc(13);
 $blockquote-cite-font-color: scale-color($header-font-color, $lightness: 23%);
 $blockquote-cite-link-color: $blockquote-cite-font-color;
+
+// We use these to style widgets
+$widget-font-size: rem-calc(14);
+$widget-font-family: $sans-font-family;
 
 // Acronym styles
 $acronym-underline: 1px dotted #ddd;
